PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2006, PHP 5.2.0
- Reimplementation of Apache2Filter, PHP can now be an arbitrary filter 
  in the chain and will read the script from the Apache stream. (John)
- Changed __toString() to be called wherever applicable. (Marcus)
- Changed E_ALL error reporting mode to include E_RECOVERABLE_ERROR. (Marcus)
- Changed realpath cache to be disabled when "open_basedir" or "safe_mode"
  are enabled on per-request basis. (Ilia)

- Implemented feature request #37971 (added error messages to disk_free_space() 
  & disk_total_space()). (Tony)
- Improved safe_mode check for the error_log() function. (Ilia)
- Improved the error reporting in SOAP extension on request failure. (Ilia)
- New crypt() implementation for win32 which is about 10 times faster and has 
  more friendly license. (Frank, Dmitry)
- Improved performance of the implode() function on associated arrays. (Ilia)
- Improved performance of str_replace() when doing 1 char to 1 char or 1 char
  to many chars replacement. (Ilia)
- Improved apache2handler SAPI:
  . Changed ap_set_content_type() to be called only once. (Mike)
  . Added support for Apache 2.2 handler in the Windows distribution. (Edin)
- Improved FastCGI SAPI: (Dmitry)
  . Removed source compatibility with libfcgi.
  . Optimized access to FastCGI environment variables by using HashTable
    instead of linear search.
  . Allowed PHP_FCGI_MAX_REQUESTS=0 that assumes no limit.
  . Allowed PHP_FCGI_CHILDREN=0 that assumes no worker children. (FastCGI
    requests are handled by main process itself)
- Improved CURL: 
  . Added control character checks for "open_basedir" and "safe_mode" checks.
    (Ilia)
  . Added implementation of curl_multi_info_read(). (Brian)
- Improved PCRE: (Andrei)
  . Added run-time configurable backtracking/recursion limits.
  . Added preg_last_error(). (Andrei)